@@ -119,7 +119,7 @@ PHP_METHOD(Phalcon_Cache_Backend_Apc, get){
 }
 
 /**
- * Stores cached content into the file backend
+ * Stores cached content into the APC backend and stops the frontend
  *
  * @param string $keyName
  * @param string $content
