@@ -51,7 +51,6 @@ class ViewCacheTest extends PHPUnit_Framework_TestCase
 		$view = new Phalcon\Mvc\View();
 		$view->setDI($di);
 		$view->setViewsDir('unit-tests/views/');
-		$view->cache(true);
 		$view->setVar("date", $date);
 
 		//First hit
@@ -61,12 +60,16 @@ class ViewCacheTest extends PHPUnit_Framework_TestCase
 		$view->finish();
 		$this->assertEquals($view->getContent(), $content);
 
+		$view->reset();
+
 		//Second hit
-		/*$view->start();
+		$view->start();
 		$view->cache(true);
 		$view->render('test8', 'index');
 		$view->finish();
-		$this->assertEquals($view->getContent(), $content);*/
+		$this->assertEquals($view->getContent(), $content);
+
+		$view->reset();
 
 		sleep(1);
 
@@ -79,6 +82,8 @@ class ViewCacheTest extends PHPUnit_Framework_TestCase
 		$view->finish();
 		$this->assertEquals($view->getContent(), $content);
 
+		$view->reset();
+
 		//Four hit
 		$view->start();
 		$view->cache(true);
@@ -88,7 +93,7 @@ class ViewCacheTest extends PHPUnit_Framework_TestCase
 
 	}
 
-	/*public function testViewOptions()
+	public function testViewOptions()
 	{
 
 		$config = array(
@@ -128,6 +133,8 @@ class ViewCacheTest extends PHPUnit_Framework_TestCase
 		$view->finish();
 		$this->assertEquals($view->getContent(), $content);
 
+		$view->reset();
+
 		sleep(1);
 
 		$view->setVar("date", date("r"));
@@ -138,6 +145,6 @@ class ViewCacheTest extends PHPUnit_Framework_TestCase
 		$view->finish();
 		$this->assertEquals($view->getContent(), $content);
 
-	}*/
+	}
 
 }
