@@ -4,6 +4,8 @@
  - Now named-routes are processed without use regular expressions
  - Now $this->view->disable() disables the auto-rendering mode completely
  - Added Phalcon\Mvc\View::enable that re-enables the auto-rendering mode
+ - Added Phalcon\Cache\Backend::stop() to stop the cache without store anything into the backend
+ - Fixed bug in Phalcon\Mvc\View that saves a empty cached content when using a cache
 
 0.6.0
  - Added functions version, version_id, date and time to Volt
